--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -6,7 +6,7 @@
 @font-face 
   font-family: 'fa-brands-400'
   src: url('../fonts/fa-brands-400.ttf')
-@mixin solid
+@mixin brand
   font-family: 'fa-brands-400'
 @font-face 
   font-family: 'Hind-Bold'
