--- a/sass/blocks/_adaptive.sass
+++ b/sass/blocks/_adaptive.sass
@@ -71,6 +71,16 @@
           height: 45%
         &.show a 
           opacity: 1
+@media screen and ( max-width: 925px )
+  .about 
+    & .about-wrap  
+      & .card 
+        width: 49%
+@media screen and ( max-width: 615px )
+  .about 
+    & .about-wrap  
+      & .card 
+        width: 100%
 @media screen and ( max-width: 455px )
   .header 
     & .header-slider 
