--- a/sass/blocks/_adaptive.sass
+++ b/sass/blocks/_adaptive.sass
@@ -59,6 +59,7 @@
         & a 
           display: block 
           opacity: 0
+          visibility: hidden
           margin: 0
           color: #515769
           line-height: 1.4 
@@ -71,6 +72,7 @@
           height: 45%
         &.show a 
           opacity: 1
+          visibility: visible
 @media screen and ( max-width: 925px )
   .about 
     & .about-wrap  
