--- a/sass/blocks/_adaptive.sass
+++ b/sass/blocks/_adaptive.sass
@@ -105,6 +105,13 @@
     & .products-wrap
       & .card 
         width: 100%
+  .test 
+    & .test-wrap 
+      justify-content: center
+      & .left 
+        width: 100%
+      & .right 
+        display: none 
 @media screen and ( max-width: 570px )
   .pricing 
     & .pricing-wrap 
