--- a/css/style.css
+++ b/css/style.css
@@ -630,6 +630,53 @@ body {
   margin-top: 0;
 }
 
+.test {
+  position: relative;
+  overflow: hidden;
+  height: 400px;
+}
+
+.test .test-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 400px;
+}
+
+.test .test-wrap .left {
+  width: 45%;
+}
+
+.test .test-wrap .left h5 {
+  font-size: 30px;
+  color: #515769;
+  font-family: 'Hind-Bold';
+  line-height: 1.4;
+}
+
+.test .test-wrap .left p {
+  margin-top: 15px;
+  font-size: 15px;
+  color: #a6a7aa;
+  line-height: 1.4;
+}
+
+.test .test-wrap .right {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50%;
+  height: 100%;
+}
+
+.test .test-wrap .right img {
+  width: 100%;
+  height: 100%;
+}
+
 @media screen and (max-width: 990px) {
   .header .top-header {
     background: #ffffff;
@@ -772,6 +819,17 @@ body {
 @media screen and (max-width: 600px) {
   .products .products-wrap .card {
     width: 100%;
+  }
+  .test .test-wrap {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .test .test-wrap .left {
+    width: 100%;
+  }
+  .test .test-wrap .right {
+    display: none;
   }
 }
 
