--- a/css/style.css
+++ b/css/style.css
@@ -800,6 +800,188 @@ body {
   width: 33.3%;
 }
 
+.footer {
+  background: url(../img/index/footer/1.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.footer .footer-top {
+  padding: 100px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer .footer-top .left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50%;
+}
+
+.footer .footer-top .left .links {
+  width: 33.5%;
+}
+
+.footer .footer-top .left .links a {
+  display: block;
+  color: #cbd3e1;
+  font-size: 16px;
+  font-family: 'Hind-Semibold';
+  margin-bottom: 25px;
+}
+
+.footer .footer-top .left .links a:hover {
+  color: #ffffff;
+}
+
+.footer .footer-top .left .social a {
+  display: block;
+  color: #cbd3e1;
+  font-size: 16px;
+  font-family: 'Hind-Semibold';
+  margin-bottom: 25px;
+}
+
+.footer .footer-top .left .social a:hover {
+  color: #ffffff;
+}
+
+.footer .footer-top .right {
+  width: 39%;
+}
+
+.footer .footer-top .right h5 {
+  color: #ffffff;
+  font-size: 30px;
+  font-family: 'Hind-Bold';
+  line-height: 1.4;
+}
+
+.footer .footer-top .right form {
+  margin-top: 15px;
+}
+
+.footer .footer-top .right form input {
+  background: rgba(0, 0, 0, 0.15);
+  width: 100%;
+  margin-bottom: 20px;
+  height: 50px;
+  color: #a6a7aa;
+  padding: 15px;
+}
+
+.footer .footer-top .right form input::-webkit-input-placeholder {
+  color: #a6a7aa;
+}
+
+.footer .footer-top .right form input:-ms-input-placeholder {
+  color: #a6a7aa;
+}
+
+.footer .footer-top .right form input::-ms-input-placeholder {
+  color: #a6a7aa;
+}
+
+.footer .footer-top .right form input::placeholder {
+  color: #a6a7aa;
+}
+
+.footer .footer-top .right form textarea {
+  background: rgba(0, 0, 0, 0.15);
+  width: 100%;
+  height: 130px;
+  color: #a6a7aa;
+  padding: 15px;
+}
+
+.footer .footer-top .right form textarea::-webkit-input-placeholder {
+  color: #a6a7aa;
+}
+
+.footer .footer-top .right form textarea:-ms-input-placeholder {
+  color: #a6a7aa;
+}
+
+.footer .footer-top .right form textarea::-ms-input-placeholder {
+  color: #a6a7aa;
+}
+
+.footer .footer-top .right form textarea::placeholder {
+  color: #a6a7aa;
+}
+
+.footer .footer-top .right form .btn {
+  margin-top: 30px;
+}
+
+.footer .footer-top .right form .btn button {
+  text-transform: uppercase;
+  color: #ffffff;
+  background: #17bed2;
+  width: 105px;
+  height: 50px;
+  font-size: 13px;
+  font-family: 'Hind-Semibold';
+  -webkit-transition: .3s linear;
+  transition: .3s linear;
+}
+
+.footer .footer-top .right form .btn button:hover {
+  opacity: .7;
+}
+
+.footer .footer-line {
+  width: 100%;
+  height: 1px;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.footer .footer-bottom {
+  padding: 40px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer .footer-bottom .logo h3 {
+  font-size: 22px;
+  font-family: 'Hind-Semibold';
+}
+
+.footer .footer-bottom .logo h3 a {
+  color: #ffffff;
+}
+
+.footer .footer-bottom .logo h3 a span {
+  color: #17BED2;
+}
+
+.footer .footer-bottom .copy p {
+  font-size: 15px;
+  color: #a6a7aa;
+}
+
+.footer .footer-bottom .copy p a {
+  font-family: 'Hind-Bold';
+  color: #17bed2;
+}
+
+.footer .footer-bottom .copy p a:hover {
+  color: #999caa;
+}
+
 @media screen and (max-width: 990px) {
   .header .top-header {
     background: #ffffff;
@@ -947,6 +1129,27 @@ body {
   }
 }
 
+@media screen and (max-width: 650px) {
+  .footer .footer-top {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer .footer-top .block {
+    margin: auto;
+    width: 100%;
+  }
+  .footer .footer-top .left {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer .footer-top .right {
+    margin-top: 50px;
+  }
+}
+
 @media screen and (max-width: 615px) {
   .about .about-wrap .card {
     width: 100%;
@@ -971,6 +1174,21 @@ body {
 @media screen and (max-width: 570px) {
   .pricing .pricing-wrap .card {
     width: 80%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .footer .footer-bottom {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer .footer-bottom .copy {
+    margin-top: 20px;
+  }
+  .footer .footer-bottom .copy p {
+    font-size: 14px;
   }
 }
 
