--- a/sass/index/_header.sass
+++ b/sass/index/_header.sass
@@ -130,3 +130,31 @@
         width: 12px 
         height: 12px 
         background: #ffffff
+  & .anchor 
+    position: fixed
+    width: 40px 
+    height: 40px 
+    right: 10px 
+    bottom: 10px 
+    background: rgba(#515769,.4)
+    transition: all .3s linear 
+    transition-timing-function: cubic-bezier(.7,1,.7,1)
+    border-radius: 3px 
+    z-index: 9997
+    opacity: 0
+    visibility: hidden
+    &.active 
+      opacity: 1
+      visibility: visible
+    &:hover
+      background: #515769
+    & a 
+      text-transform: uppercase
+      font-size: 11px 
+      letter-spacing: 1px 
+      color: #ffffff
+      width: 100%
+      height: 100%
+      display: flex 
+      align-items: center
+      justify-content: center
