--- a/sass/blocks/_adaptive.sass
+++ b/sass/blocks/_adaptive.sass
@@ -142,6 +142,12 @@
         margin-top: 20px 
         & p 
           font-size: 14px 
+@media screen and ( max-width: 475px )
+  .header-pricing 
+    & .header-title 
+      & .title 
+        & h2 
+          font-size: 40px 
 @media screen and ( max-width: 455px )
   .header 
     & .header-slider 
