--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,11 +2,17 @@
 @import 'index/header'
 @import 'index/about'
 @import 'index/products'
-@import 'index/clients'
-@import 'index/reviews'
-@import 'index/pricing'
+@import 'blocks/clients'
+@import 'blocks/reviews'
+@import 'blocks/pricing'
 @import 'index/test'
 @import 'index/showcase'
-@import 'index/footer'
+@import 'blocks/footer'
 @import 'pricing/header-pricing'
+@import 'about/header-about'
+@import 'about/products-about'
+@import 'about/about-main'
+@import 'about/about-card'
+@import 'about/about-reviews'
+@import 'about/about-team'
 @import 'blocks/adaptive'
