--- a/css/style.css
+++ b/css/style.css
@@ -1066,6 +1066,388 @@ body {
   line-height: 1.4;
 }
 
+.header-about {
+  background: url(../img/pricing/header/1.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.header-about .header-title {
+  height: 100%;
+}
+
+.header-about .header-title .title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+}
+
+.header-about .header-title .title h2 {
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 80px;
+  font-family: 'Hind-Bold';
+  line-height: 1.1;
+}
+
+.header-about .header-title .title p {
+  margin-top: 15px;
+  font-size: 15px;
+  color: #a6a7aa;
+  line-height: 1.4;
+}
+
+.products-about {
+  padding: 100px 0;
+  border-bottom: 1px solid #edf0f2;
+}
+
+.products-about .products-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.products-about .products-wrap .card {
+  width: 31%;
+}
+
+.products-about .products-wrap .card h6 {
+  font-size: 22px;
+  color: #515769;
+  font-family: 'Hind-Bold';
+  line-height: 1.4;
+}
+
+.products-about .products-wrap .card p {
+  margin-top: 15px;
+  font-size: 15px;
+  color: #a6a7aa;
+  line-height: 1.4;
+}
+
+.products-about .products-wrap .card a {
+  display: inline-block;
+  margin-top: 15px;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-family: 'Hind-Semibold';
+  color: #81848f;
+  position: relative;
+}
+
+.products-about .products-wrap .card a:hover {
+  opacity: .8;
+}
+
+.products-about .products-wrap .card a::before {
+  content: '';
+  position: absolute;
+  top: 8px;
+  right: -15px;
+  width: 9px;
+  height: 2px;
+  background: #17bed2;
+}
+
+.about-main {
+  padding: 100px 0;
+}
+
+.about-main .about-main-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.about-main .about-main-wrap .block h3 {
+  font-family: 'Hind-Bold';
+  color: #515769;
+  font-size: 30px;
+  line-height: 1.4;
+}
+
+.about-main .about-main-wrap .block p {
+  margin-top: 30px;
+  font-size: 15px;
+  color: #a6a7aa;
+  line-height: 1.4;
+}
+
+.about-main .about-main-wrap .content {
+  width: 57%;
+}
+
+.about-main .about-main-wrap .img {
+  width: 31%;
+}
+
+.about-main .about-main-wrap .img img {
+  width: 100%;
+}
+
+.about-card {
+  padding: 100px 0;
+  background: #fafafa;
+}
+
+.about-card .about-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.about-card .about-wrap .card {
+  width: 33%;
+  background: #ffffff;
+  padding: 50px;
+  height: 324px;
+  margin: 1px;
+  position: relative;
+}
+
+.about-card .about-wrap .card:hover .icon .fas {
+  -webkit-transform: translate3d(0, -100%, 0);
+          transform: translate3d(0, -100%, 0);
+  opacity: 0;
+}
+
+.about-card .about-wrap .card:hover .content {
+  -webkit-transform: translate3d(0, -30%, 0);
+          transform: translate3d(0, -30%, 0);
+}
+
+.about-card .about-wrap .card .icon .fas {
+  font-family: 'fa-solid-900';
+  color: #999caa;
+  font-size: 30px;
+  -webkit-transition: all .3s linear;
+  transition: all .3s linear;
+  -webkit-transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
+          transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
+}
+
+.about-card .about-wrap .card .content {
+  margin-top: 30px;
+  -webkit-transition: .3s linear;
+  transition: .3s linear;
+  -webkit-transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
+          transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
+}
+
+.about-card .about-wrap .card .content h5 {
+  font-size: 22px;
+  color: #515769;
+  font-family: 'Hind-Bold';
+  line-height: 1.4;
+}
+
+.about-card .about-wrap .card .content p {
+  margin-top: 15px;
+  font-size: 15px;
+  color: #a6a7aa;
+  line-height: 1.4;
+}
+
+.about-card .about-wrap .card a {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.about-reviews {
+  padding: 100px 0;
+}
+
+.about-reviews .title h5 {
+  font-size: 30px;
+  font-family: 'Hind-Bold';
+  color: #515769;
+  line-height: 1.4;
+}
+
+.about-reviews .reviews-slider {
+  margin-top: 25px;
+  max-width: 848px;
+}
+
+.about-reviews .reviews-slider .slick-list {
+  overflow: hidden;
+}
+
+.about-reviews .reviews-slider .slick-list .slick-track {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.about-reviews .reviews-slider .slick-list .slick-track .reviews-slider-block {
+  padding: 0 20px 0 40px;
+  position: relative;
+}
+
+.about-reviews .reviews-slider .slick-list .slick-track .reviews-slider-block::before {
+  content: '“';
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-size: 60px;
+  color: #17bed2;
+  line-height: 1;
+}
+
+.about-reviews .reviews-slider .slick-list .slick-track .reviews-slider-block p {
+  font-size: 17px;
+  color: #a6a7aa;
+  line-height: 1.4;
+  margin-bottom: 20px;
+}
+
+.about-reviews .reviews-slider .slick-list .slick-track .reviews-slider-block h6 {
+  font-size: 15px;
+  font-weight: normal;
+  color: #a6a7aa;
+}
+
+.about-reviews .reviews-slider .slick-list .slick-track .reviews-slider-block h6 strong {
+  font-family: 'Hind-Bold';
+  color: #81848f;
+  font-size: 14px;
+}
+
+.about-team {
+  padding: 100px 0;
+  background: #fafafa;
+}
+
+.about-team .title {
+  width: 47%;
+}
+
+.about-team .title h3 {
+  color: #515769;
+  font-size: 30px;
+  font-family: 'Hind-Bold';
+  line-height: 1.4;
+}
+
+.about-team .title p {
+  margin-top: 15px;
+  font-size: 15px;
+  color: #a6a7aa;
+  line-height: 1.4;
+}
+
+.about-team .about-team-wrap {
+  margin-top: 55px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.about-team .about-team-wrap .card {
+  width: 31%;
+}
+
+.about-team .about-team-wrap .card .img img {
+  width: 100%;
+}
+
+.about-team .about-team-wrap .card .content {
+  margin-top: 20px;
+}
+
+.about-team .about-team-wrap .card .content .name-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about-team .about-team-wrap .card .content .name-wrap h5 {
+  font-size: 22px;
+  font-family: 'Hind-Bold';
+  line-height: 1.4;
+}
+
+.about-team .about-team-wrap .card .content .name-wrap h5 a {
+  color: #515769;
+}
+
+.about-team .about-team-wrap .card .content .name-wrap h5 a:hover {
+  opacity: .7;
+}
+
+.about-team .about-team-wrap .card .content .name-wrap span {
+  text-transform: uppercase;
+  margin-left: 20px;
+  color: #bfc1c7;
+}
+
+.about-team .about-team-wrap .card .content p {
+  margin-top: 15px;
+  line-height: 1.4;
+  color: #a6a7aa;
+  font-size: 15px;
+}
+
+.about-team .about-team-wrap .card .content .read {
+  display: inline-block;
+  margin-top: 15px;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-family: 'Hind-Semibold';
+  color: #81848f;
+  position: relative;
+}
+
+.about-team .about-team-wrap .card .content .read:hover {
+  opacity: .8;
+}
+
+.about-team .about-team-wrap .card .content .read:before {
+  content: '';
+  position: absolute;
+  width: 9px;
+  height: 2px;
+  background: #17bed2;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  right: -15px;
+}
+
 @media screen and (max-width: 990px) {
   .header .top-header {
     background: #ffffff;
@@ -1167,6 +1549,9 @@ body {
   .about .about-wrap .card {
     width: 49%;
   }
+  .about-card .about-wrap .card {
+    width: 49%;
+  }
 }
 
 @media screen and (max-width: 865px) {
@@ -1211,6 +1596,35 @@ body {
   .test .test-wrap .right {
     display: none;
   }
+  .about-team .title {
+    width: 100%;
+  }
+  .about-team .about-team-wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 0;
+  }
+  .about-team .about-team-wrap .card {
+    margin: 50px auto 0;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .about-main .about-main-wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .about-main .about-main-wrap .block {
+    width: 100%;
+  }
+  .about-main .about-main-wrap .img {
+    margin-top: 50px;
+  }
 }
 
 @media screen and (max-width: 650px) {
@@ -1238,6 +1652,9 @@ body {
   .about .about-wrap .card {
     width: 100%;
   }
+  .about-card .about-wrap .card {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -1252,6 +1669,20 @@ body {
   }
   .showcase .showcase-wrap .card {
     width: 100%;
+  }
+  .products-about .products-wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .products-about .products-wrap .card {
+    margin: 50px auto 0;
+    width: 100%;
+    text-align: center;
+  }
+  .products-about .products-wrap .card:first-of-type {
+    margin-top: 0;
   }
 }
 
