--- a/sass/blocks/_adaptive.sass
+++ b/sass/blocks/_adaptive.sass
@@ -78,6 +78,10 @@
     & .about-wrap  
       & .card 
         width: 49%
+  .about-card
+    & .about-wrap 
+      & .card 
+        width: 49%
 @media screen and ( max-width: 865px )
   .products
     & .products-wrap
@@ -103,6 +107,23 @@
         width: 100%
       & .right 
         display: none 
+  .about-team
+    & .title 
+      width: 100%
+    & .about-team-wrap 
+      flex-direction: column
+      margin-top: 0 
+      & .card 
+        margin: 50px auto 0 
+        width: 100% 
+@media screen and ( max-width: 750px )
+  .about-main  
+    & .about-main-wrap 
+      flex-direction: column 
+      & .block 
+        width: 100%
+      & .img 
+        margin-top: 50px 
 @media screen and ( max-width: 650px )
   .footer 
     & .footer-top  
@@ -119,6 +140,10 @@
     & .about-wrap  
       & .card 
         width: 100%
+  .about-card 
+    & .about-wrap  
+      & .card 
+        width: 100%
 @media screen and ( max-width: 600px )
   .products
     & .products-wrap
@@ -129,6 +154,15 @@
       flex-direction: column 
       & .card 
         width: 100%
+  .products-about 
+    & .products-wrap 
+      flex-direction: column 
+      & .card 
+        margin: 50px auto 0 
+        width: 100%
+        text-align: center
+        &:first-of-type
+          margin-top: 0
 @media screen and ( max-width: 570px )
   .pricing 
     & .pricing-wrap 
