--- a/sass/about/_about-team.sass
+++ b/sass/about/_about-team.sass
@@ -20,6 +20,7 @@
     & .card 
       width: 31%
       & .img 
+        background: #ffffff
         & img 
           width: 100%
       & .content 
