--- a/sass/blocks/_adaptive.sass
+++ b/sass/blocks/_adaptive.sass
@@ -163,6 +163,11 @@
         text-align: center
         &:first-of-type
           margin-top: 0
+  .header-products 
+    & .header-title 
+      & .title 
+        & h2 
+          font-size: 60px 
 @media screen and ( max-width: 570px )
   .pricing 
     & .pricing-wrap 
