--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,7 +12,6 @@
 @import 'about/header-about'
 @import 'about/products-about'
 @import 'about/about-main'
-@import 'about/about-card'
-@import 'about/about-reviews'
 @import 'about/about-team'
+@import 'products/header-products'
 @import 'blocks/adaptive'
