--- a/css/style.css
+++ b/css/style.css
@@ -1204,143 +1204,6 @@ body {
   width: 100%;
 }
 
-.about-card {
-  padding: 100px 0;
-  background: #fafafa;
-}
-
-.about-card .about-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.about-card .about-wrap .card {
-  width: 33%;
-  background: #ffffff;
-  padding: 50px;
-  height: 324px;
-  margin: 1px;
-  position: relative;
-}
-
-.about-card .about-wrap .card:hover .icon .fas {
-  -webkit-transform: translate3d(0, -100%, 0);
-          transform: translate3d(0, -100%, 0);
-  opacity: 0;
-}
-
-.about-card .about-wrap .card:hover .content {
-  -webkit-transform: translate3d(0, -30%, 0);
-          transform: translate3d(0, -30%, 0);
-}
-
-.about-card .about-wrap .card .icon .fas {
-  font-family: 'fa-solid-900';
-  color: #999caa;
-  font-size: 30px;
-  -webkit-transition: all .3s linear;
-  transition: all .3s linear;
-  -webkit-transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
-          transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
-}
-
-.about-card .about-wrap .card .content {
-  margin-top: 30px;
-  -webkit-transition: .3s linear;
-  transition: .3s linear;
-  -webkit-transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
-          transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
-}
-
-.about-card .about-wrap .card .content h5 {
-  font-size: 22px;
-  color: #515769;
-  font-family: 'Hind-Bold';
-  line-height: 1.4;
-}
-
-.about-card .about-wrap .card .content p {
-  margin-top: 15px;
-  font-size: 15px;
-  color: #a6a7aa;
-  line-height: 1.4;
-}
-
-.about-card .about-wrap .card a {
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-}
-
-.about-reviews {
-  padding: 100px 0;
-}
-
-.about-reviews .title h5 {
-  font-size: 30px;
-  font-family: 'Hind-Bold';
-  color: #515769;
-  line-height: 1.4;
-}
-
-.about-reviews .reviews-slider {
-  margin-top: 25px;
-  max-width: 848px;
-}
-
-.about-reviews .reviews-slider .slick-list {
-  overflow: hidden;
-}
-
-.about-reviews .reviews-slider .slick-list .slick-track {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.about-reviews .reviews-slider .slick-list .slick-track .reviews-slider-block {
-  padding: 0 20px 0 40px;
-  position: relative;
-}
-
-.about-reviews .reviews-slider .slick-list .slick-track .reviews-slider-block::before {
-  content: '“';
-  position: absolute;
-  left: 0;
-  top: 0;
-  font-size: 60px;
-  color: #17bed2;
-  line-height: 1;
-}
-
-.about-reviews .reviews-slider .slick-list .slick-track .reviews-slider-block p {
-  font-size: 17px;
-  color: #a6a7aa;
-  line-height: 1.4;
-  margin-bottom: 20px;
-}
-
-.about-reviews .reviews-slider .slick-list .slick-track .reviews-slider-block h6 {
-  font-size: 15px;
-  font-weight: normal;
-  color: #a6a7aa;
-}
-
-.about-reviews .reviews-slider .slick-list .slick-track .reviews-slider-block h6 strong {
-  font-family: 'Hind-Bold';
-  color: #81848f;
-  font-size: 14px;
-}
-
 .about-team {
   padding: 100px 0;
   background: #fafafa;
@@ -1450,6 +1313,46 @@ body {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   right: -15px;
+}
+
+.header-products {
+  background: url(../img/products/header/1.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.header-products .header-title {
+  height: 100%;
+}
+
+.header-products .header-title .title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+}
+
+.header-products .header-title .title h2 {
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 80px;
+  font-family: 'Hind-Bold';
+  line-height: 1.1;
+}
+
+.header-products .header-title .title p {
+  margin-top: 15px;
+  font-size: 15px;
+  color: #a6a7aa;
+  line-height: 1.4;
 }
 
 @media screen and (max-width: 990px) {
@@ -1687,6 +1590,9 @@ body {
   }
   .products-about .products-wrap .card:first-of-type {
     margin-top: 0;
+  }
+  .header-products .header-title .title h2 {
+    font-size: 60px;
   }
 }
 
